# echo-type

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  TEST_CHECKLIST.md  TODO.md  apple.txt  biome.json  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.omc/: project-memory.json
.sisyphus/: ralph-loop.local.md
docs/: TEST_CHECKLIST_V1.1.md  app-store-release.md  mac-unsigned-distribution.md  ollama-final-summary.md  ollama-implementation-report.md  ollama-quick-guide.md  ollama-test-results.md  supabase-setup.md  v1.1-features.md  vercel-deployment.md  vercel-yt-dlp-solution.md  zhipu-ai-test-plan.md
e2e/: app-shell.spec.ts  chat-agent-upgrade.spec.ts  chat-content-exercises.spec.ts  chat-navigation-e2e.spec.ts  chat-smart-assistant.spec.ts  chat-toolbar-e2e.spec.ts  dashboard-daily-plan.spec.ts  i18n.spec.ts  import-flows.spec.ts  landing.spec.ts  library.spec.ts  listen.spec.ts  ollama-test.spec.ts  ollama-ux-test.spec.ts  p0-learning-loop.spec.ts  parity-smoke.spec.ts  read-word-highlight.spec.ts  read.spec.ts  settings-debug.spec.ts  settings.spec.ts  shadow-reading.spec.ts  speak-api-verification.spec.ts  (+13 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/bootstrap/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs
(+845 files in other folders)
